# chain-segment

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  clustering_models.ipynb  eda.ipynb  kmeans_model.pkl  predict.py  pyproject.toml  request.py  train.py  visualize_clusters.py  wallet_dataset.csv  wallet_dataset_labeled.csv  wallet_features_scaled.csv  wallet_power_transformer.pkl
.github/workflows/: weekly_retrain.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: PersonaChart.jsx  RoastCard.jsx
src/: inference.py  llm.py
